# screenshot

./: .travis.yml  AUTHORS.md  CMakeLists.txt  README.md  screenshot.qbs
.github/workflows/: build.yml
.github/workflows/scripts/: build-deps
.reuse/: dep5
.travis/: build.sh
.tx/: config  sources.json
src/screenshot/: CMakeLists.txt  io.liri.Screenshot.desktop  io.liri.Screenshot.desktop.in  io.liri.Shell.Screenshooter.xml  main.cpp  screenshot.qbs  screenshotclient.cpp  screenshotclient.h
src/screenshot/qml/: main.qml
src/screenshot/translations/: io.liri.Screenshot_ca.desktop.in  io.liri.Screenshot_da.desktop.in  io.liri.Screenshot_de.desktop.in  io.liri.Screenshot_es.desktop.in  io.liri.Screenshot_es_MX.desktop.in  io.liri.Screenshot_it.desktop.in  io.liri.Screenshot_ja.desktop.in  io.liri.Screenshot_lt.desktop.in  io.liri.Screenshot_nl.desktop.in  io.liri.Screenshot_pl.desktop.in  io.liri.Screenshot_pt_BR.desktop.in  io.liri.Screenshot_ru.desktop.in  io.liri.Screenshot_tr.desktop.in  io.liri.Screenshot_zh_CN.desktop.in  io.liri.Screenshot_zh_TW.desktop.in  liri-screenshot.ts  liri-screenshot_ca.ts  liri-screenshot_da.ts  liri-screenshot_de.ts  liri-screenshot_el.ts  liri-screenshot_es.ts  liri-screenshot_es_419.ts  liri-screenshot_es_MX.ts  liri-screenshot_fr.ts  liri-screenshot_id.ts  liri-screenshot_it.ts  liri-screenshot_ja.ts  liri-screenshot_lt.ts  liri-screenshot_nl.ts  liri-screenshot_pl.ts  liri-screenshot_pt_BR.ts  liri-screenshot_pt_PT.ts  liri-screenshot_ru.ts  liri-screenshot_tr.ts  liri-screenshot_zh_CN.ts  liri-screenshot_zh_TW.ts
translations/: io.liri.Screenshot_ca.desktop.in  io.liri.Screenshot_el.desktop.in  io.liri.Screenshot_es.desktop.in  io.liri.Screenshot_es_419.desktop.in  io.liri.Screenshot_es_MX.desktop.in  io.liri.Screenshot_fr.desktop.in  io.liri.Screenshot_id.desktop.in  io.liri.Screenshot_nl.desktop.in  io.liri.Screenshot_pt_PT.desktop.in  io.liri.Screenshot_tr.desktop.in  io.liri.Screenshot_zh_CN.desktop.in  liri-screenshot.ts  liri-screenshot_ca.ts  liri-screenshot_da.ts  liri-screenshot_de.ts  liri-screenshot_es.ts  liri-screenshot_es_419.ts  liri-screenshot_es_MX.ts  liri-screenshot_fr.ts  liri-screenshot_id.ts  liri-screenshot_it.ts  liri-screenshot_it_IT.ts  liri-screenshot_ja.ts  liri-screenshot_lt.ts  liri-screenshot_nl.ts  liri-screenshot_pl.ts  liri-screenshot_pt_BR.ts  liri-screenshot_pt_PT.ts  liri-screenshot_ru.ts  liri-screenshot_ru_RU.ts  liri-screenshot_tr.ts  liri-screenshot_zh_CN.ts  liri-screenshot_zh_TW.ts
translations/data/desktop/: ca.po  da.po  de.po  desktop.pot  el.po  es.po  es_419.po  es_MX.po  fr.po  id.po  it.po  ja.po  lt.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ru.po  ru_RU.po  tr.po  zh_CN.po  zh_TW.po
